<resources>
    <string name="app_name">Equidistant_Group_Project</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="quit">Quit</string>
    <string name="description_profile_picture">Profile Picture</string>
<<<<<<<<< Temporary merge branch 1
    <string name="preference_file_key">fsu.edu.equidistant.PREFERENCE_FILE_KEY</string>
=========

    <string name="launch_activity">Launch activity</string>
>>>>>>>>> Temporary merge branch 2
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
<<<<<<<<< Temporary merge branch 1
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="no_location_text">No current location</string>

=========

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">edu.fsu.equidistant.location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
>>>>>>>>> Temporary merge branch 2
</resources>