<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.fsu.equidistant.fragments.RegisterFragment">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:autofillHints="false"
        android:hint="@string/username"
        android:inputType="text"
        android:imeOptions="actionNext"
        />

    <EditText
        android:id="@+id/et_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:autofillHints="false"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:imeOptions="actionNext"
        android:layout_below="@id/et_username"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:autofillHints="false"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/et_phoneNumber"
        android:imeOptions="actionSend"
        />
    <EditText
        android:id="@+id/et_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:autofillHints="false"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/et_password"
        android:imeOptions="actionSend"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_below="@+id/et_validate"
        android:layout_centerInParent="true"
        />

</RelativeLayout>